--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "animate.css": "^4.1.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
@@ -18,6 +19,7 @@
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "jspdf": "^3.0.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
